finalisation du projet, ajout de la fonctionnalité pour modifier un post

--- a/frontend/account.html
+++ b/frontend/account.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <script src="https://kit.fontawesome.com/77c65d2f94.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Projet 7</title>
 
 </head>
