--- a/frontend/account.html
+++ b/frontend/account.html
@@ -12,16 +12,17 @@
 
 <body>
     <header>
-        <a href="connexion.html"><i class="fas fa-sign-out-alt"></i></i></a>
-        <a href="main.html"><img src="img/icon.png" alt="logo groupomania" class="logo"></a>
-        <a href="account.html"><i class="fas fa-user-circle account-logo"></i></a>
-    </header>
+        <a href="connexion.html" class="nav-item"><img src="img/exit.png" alt="bouton déconnexion" class="nav--img"></a>
+        <a href="main.html" class="logo nav-item"><img src="img/icon.png" alt="logo groupomania" class="nav--img"></a>
+        <a href="account.html" class="nav-item"><img src="img/account.png" alt="bouton accéder à votre compte"
+            class="nav--img"></a>
+        </header>
 
     <main>
         <div id="userInfo" class="user-container">
 
-            <button id="disableAccount">Désactiver le compte</button>
         </div>
+        
     </main>
 
 
