--- a/frontend/connexion.html
+++ b/frontend/connexion.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="https://kit.fontawesome.com/77c65d2f94.js" crossorigin="anonymous"></script>
     <title>Projet 7</title>
     
 </head>
@@ -76,6 +77,7 @@
 </main>
     <script type="text/javascript" src="ajax.js"></script>
     <script type="text/javascript" src="connexion.js"></script>
+    <script type="text/javascript" src="utils.js"></script>
     
 </body>
 </html>
