--- a/frontend/account.html
+++ b/frontend/account.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <a href="connexion.html" class="nav-item"><img src="img/exit.png" alt="bouton déconnexion" class="nav--img"></a>
+        <a href="connexion.html" class="nav-item"><img src="img/logout.png" alt="bouton déconnexion" class="nav--img logout"></a>
         <a href="main.html" class="logo nav-item"><img src="img/icon.png" alt="logo groupomania" class="nav--img"></a>
         <a href="account.html" class="nav-item"><img src="img/account.png" alt="bouton accéder à votre compte"
             class="nav--img"></a>
