--- a/frontend/connexion.html
+++ b/frontend/connexion.html
@@ -20,7 +20,7 @@
 
 
     <section class="container--log connexion">
-        <h2 class="title">Connectez Vous !</h2>
+        <h2 class="title">Connectez vous !</h2>
         <div class="connexion--block">
             <div class="connexion--input">
                 <label>
