--- a/frontend/account.html
+++ b/frontend/account.html
@@ -12,10 +12,7 @@
 
 <body>
     <header>
-        <a href="connexion.html" class="nav-item"><img src="img/logout.png" alt="bouton déconnexion" class="nav--img logout"></a>
         <a href="main.html" class="logo nav-item"><img src="img/icon.png" alt="logo groupomania" class="nav--img"></a>
-        <a href="account.html" class="nav-item"><img src="img/account.png" alt="bouton accéder à votre compte"
-            class="nav--img"></a>
         </header>
 
     <main>
@@ -26,9 +23,11 @@
     </main>
 
 
-    <script type="text/javascript" src="ajax.js"></script>
-    <script type="text/javascript" src="Account.js"></script>
-    <script type="text/javascript" src="accountInfo.js"></script>
+    <script src="ajax.js"></script>
+    <script src="Account.js"></script>
+    <script src="utils.js"></script>
+    <script src="accountInfo.js"></script>
+    
 
 </body>
 
